--- a/index.html
+++ b/index.html
@@ -1,54 +1,76 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이력서</title>
-    <link rel="stylesheet" href="styles2.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>자기소개서</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div class="resume">
-    <header>
-        <h1>강유빈</h1>
-        <p>이메일: hong@example.com | 전화번호: 010-1234-5678 | 주소: 서울특별시</p>
-    </header>
-    <section>
-        <h2>프로필</h2>
-        <p>효과적으로 문제를 해결하고 창의적인 해결책을 제시하는 개발자입니다. 팀과의 협력을 중시하며 새로운 기술을 배우고 적용하는 것을 좋아합니다.</p>
-    </section>
-    <section>
-        <h2>경력</h2>
-        <div class="job">
-            <h3>ABC 회사</h3>
-            <p>프론트엔드 개발자 | 2020.01 - 현재</p>
-            <ul>
-                <li>React를 사용한 웹 애플리케이션 개발</li>
-                <li>UI/UX 개선 및 사용자 피드백 반영</li>
-                <li>팀 프로젝트 관리 및 협업</li>
-            </ul>
+  <div class="wrapper">
+    <div class="resume-container">
+      <!-- 좌측 프로필 -->
+      <div class="left">
+        <img src="profile.jpg" alt="프로필 사진" class="profile-img" />
+        <h1>이민정</h1>
+        <p>Lee min jeong<br>23세 (2000년생)</p>
+
+        <div class="contact">
+          <p>📞 010.1234.5678</p>
+          <p>📧 gongform@naver.com</p>
+          <p>📍 수원시 팔달구 인계로 50<br>인계타워 A동 201호</p>
         </div>
-        <div class="job">
-            <h3>XYZ 회사</h3>
-            <p>백엔드 개발자 | 2018.01 - 2019.12</p>
-            <ul>
-                <li>Node.js를 사용한 서버 개발</li>
-                <li>데이터베이스 설계 및 최적화</li>
-                <li>API 개발 및 유지보수</li>
-            </ul>
-        </div>
-    </section>
-    <section>
-        <h2>교육</h2>
-        <p>서울대학교 컴퓨터공학과 | 학사 | 2013.03 - 2017.02</p>
-    </section>
-    <section>
-        <h2>기술</h2>
+
+        <h3>희망 근무 시간 / 시급</h3>
+        <p>시간 협의 / 시급 9,000원</p>
+
+        <h3>My Strength</h3>
         <ul>
-            <li>프로그래밍 언어: JavaScript, Python, Java</li>
-            <li>프레임워크: React, Node.js, Django</li>
-            <li>도구: Git, Docker, Jenkins</li>
+          <li>다양한 분야의 아르바이트 경력</li>
+          <li>근무지 3곳 1년 근무</li>
+          <li>시간엄수, 기본업수</li>
+          <li>올바른 마인드</li>
+          <li>거주지 근무지와 근접 (도보 10분)</li>
         </ul>
-    </section>
-</div>
+      </div>
+
+      <!-- 우측 자기소개서 -->
+      <div class="right">
+        <div class="section">
+          <h2>지원부문</h2>
+          <p>아르바이트 입사지원 (지원공고명)</p>
+        </div>
+
+        <div class="section">
+          <h2>학력사항</h2>
+          <p>2021-03 ~ 2024-03<br>수원대학교 경영학과 졸업</p>
+        </div>
+
+        <div class="section">
+          <h2>경력사항</h2>
+          <p>2000-00 ~ 2000-00<br>파리바게트 인계지점<br>베이커리 류 포장 및 판매</p>
+          <br />
+          <p>2000-00 ~ 2000-00<br>쥬씨 영통지점<br>생과일쥬스 커피 제조 판매</p>
+          <br />
+          <p>2000-00 ~ 2000-00<br>다운영어학원<br>초중고 학생 영어 학습보조</p>
+          <br />
+          <p>2000-00 ~ 2000-00<br>패스트푸드<br>버거 류 제조/판매</p>
+        </div>
+
+        <div class="section">
+          <h2>업무다짐</h2>
+          <p>
+            업무메뉴얼에 맞추어 빠르게 적용할 수 있습니다.<br />
+            시간 엄수 잘 하겠습니다.<br />
+            맡겨주시면 책임감을 갖고 임하겠습니다.
+          </p>
+          <p class="confirm">
+            위 기재 사항은 사실과 다름이 없음을 확인합니다.<br />
+            2024년 2월 15일 이 민 정 (인)
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
